# warp_example_api

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  questions.json
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
migrations/: 20220904133713_add_questions_table.up.sql  20220904134226_add_answers_table.up.sql  20220911104643_add_accounts_table.up.sql  20220911131130_extend_answers_table.up.sql  20220911131139_extend_questions_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
