[package]
name = "question_and_answer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
handle-errors = { path = "handle-errors" }
tracing = { version = "0.1", features=["log"]}
tracing-subscriber = {version = "0.3", features=["env-filter"]}
uuid = { version = "1.1", features = ["v4"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "migrate" ] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
dotenv = "0.15"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4"